# index_edge

./: CMakeLists.txt  README.md  README_german.md
cmd/: cgraph.c
include/: cgraph.h.cmake
src/bits/: bitarray.c  bitarray.h  bitsequence.c  bitsequence.h  reader.c  reader.h  rrr_writer.c  rrr_writer.h  writer.c  writer.h
src/cgraph/: cgraphr.c  cgraphw.c
src/collections/: hashmap.c  hashmap.h  hashset.h  intset.c  intset.h  map.c  map.h  ringqueue.c  ringqueue.h  treemap.c  treemap.h  treeset.h
src/compress/dict/: dict_writer.c  dict_writer.h  fm_index_writer.c  fm_index_writer.h  huffman.c  huffman.h  sort_r.h  wavelet_tree_writer.c  wavelet_tree_writer.h
src/compress/graph/: eliasfano_list.c  eliasfano_list.h  hgraph.c  hgraph.h  k2_writer.c  k2_writer.h  repair.c  repair.h  repair_types.h  rule_creator.c  rule_creator.h  slhr_grammar.c  slhr_grammar.h  slhr_grammar_writer.c  slhr_grammar_writer.h
src/reader/: bitsequence_r.c  bitsequence_r.h  dict.c  dict.h  edge.c  edge.h  eliasfano.c  eliasfano.h  fmindex.c  fmindex.h  grammar.c  grammar.h  k2.c  k2.h  rules.c  rules.h  startsymbol.c  startsymbol.h  table.c  table.h  table_data.h  wavelettree.c  wavelettree.h
src/util/: arith.c  arith.h  constants.h  memdup.c  memdup.h  panic.c  panic.h  trap.h
